# ObjectivelyMVC

./: .autotools  .cproject  .gitignore  .project  AUTHORS  COPYING  Doxyfile  INSTALL.md  Makefile.am  NEWS  README  README.md  appveyor.yml  configure.ac
.github/workflows/: build.yml  docs.yml  release.yml
Assets/: Makefile.am  Renderer.frag.dxil  Renderer.frag.dxil.h  Renderer.frag.glsl  Renderer.frag.metal.h  Renderer.frag.msl  Renderer.frag.msl.h  Renderer.frag.spv  Renderer.frag.spv.h  Renderer.vert.dxil  Renderer.vert.dxil.h  Renderer.vert.glsl  Renderer.vert.metal  Renderer.vert.metal.h  Renderer.vert.msl  Renderer.vert.msl.h  Renderer.vert.spv  Renderer.vert.spv.h  check.png.h  clack.wav.h  click.wav.h  coda.ttf.h  debug.css  debug.css.h  debug.json  debug.json.h  renderer_fs.glsl  renderer_fs.glsl.h  renderer_vs.glsl  renderer_vs.glsl.h  resize.png.h  select.wav.h  stylesheet.css  stylesheet.css.h
Documentation/: INSTALL.md  guide.md  index.md  install.md  layout.xml  style.css  styles.css
Examples/: Hello-Scene.c  Hello-Scene.frag.glsl  Hello-Scene.h  Hello-Scene.vert.glsl  Hello.c  Hello.frag.glsl  Hello.frag.spv  Hello.json  Hello.vert.glsl  Hello.vert.metal  Hello.vert.spv  HelloMVC  HelloMVC.c  HelloViewController.c  HelloViewController.h  HelloViewController.json  Makefile.am  Theme.json  click.wav.h
Examples/Hello-iOS/: Hello-iOS.c  Info.plist  LaunchScreen.storyboard
Examples/Hello-iOS/Hello-iOS.xcodeproj/: project.pbxproj
Frameworks/: OpenGL  build-xcframework.sh  fetch-sdl3-extensions.sh
ObjectivelyMVC.vs15/: .gitignore  Example.vcxproj  Example.vcxproj.filters  ObjectivelyMVC.sln  ObjectivelyMVC.vcxproj  ObjectivelyMVC.vcxproj.filters  PREPARE_ALL.ps1  build_settings.props  sdl3.targets
ObjectivelyMVC.vs15/Sources/: WindowlyMVC.h
ObjectivelyMVC.vs15/Sources/ObjectivelyMVC/: Config.h
ObjectivelyMVC.vs15/libs/: prepare.bat
ObjectivelyMVC.vs15/libs/fontconfig/: prepare.bat
ObjectivelyMVC.vs15/libs/fontconfig/fontconfig/: PREPARE  PREPARE.ps1  fcfreetype.h  fcprivate.h  fontconfig.h
ObjectivelyMVC.vs15/libs/fontconfig/lib/Win32/: fontconfig.lib
ObjectivelyMVC.vs15/libs/fontconfig/lib/Win64/: fontconfig.lib
ObjectivelyMVC.vs15/libs/fontconfig/src/: fcarch.c  fcarch.h  fcatomic.c  fcatomic.h  fcblanks.c  fccache.c  fccfg.c  fccharset.c  fccompat.c  fcdbg.c  fcdefault.c  fcdeprecate.h  fcdir.cpp  fcformat.c  fcfreetype.c  fcfs.c  fcftint.h  fchash.c  fcinit.c  fcint.h  fclang.c  fclist.c  fcmatch.c  fcmatrix.c  fcmutex.h  fcname.c  fcobjs.c  fcobjs.h  fcpat.c  fcserialize.c  fcstat.c  fcstr.c  fcwindows.h  fcxml.c  ftglue.c  ftglue.h
ObjectivelyMVC.vs15/libs/fontconfig/vs/: fontconfig.vcxproj  fontconfig.vcxproj.filters
ObjectivelyMVC.vs15/libs/fontconfig/win32/include/: config.h  dirent.h  fcobjshash.h
ObjectivelyMVC.vs15/libs/fontconfig/win32/src/: dirent.c
ObjectivelyMVC.vs15/libs/freetype/lib/Win32/: freetype.lib
ObjectivelyMVC.vs15/libs/freetype/lib/Win64/: freetype.lib
ObjectivelyMVC.vs15/libs/sdl/: prepare.bat
ObjectivelyMVC.vs15/libs/sdl/SDL2/: PREPARE  PREPARE.ps1  SDL_cpuinfo.h
ObjectivelyMVC.vs15/libs/sdl/lib/Win32/: SDL2.lib  (+2 more)
ObjectivelyMVC.vs15/libs/sdl_image/: prepare.bat
ObjectivelyMVC.vs15/libs/sdl_image/SDL2/: PREPARE  PREPARE.ps1
ObjectivelyMVC.vs15/libs/sdl_ttf/: prepare.bat
ObjectivelyMVC.vs15/libs/sdl_ttf/SDL2/: PREPARE  PREPARE.ps1
ObjectivelyMVC.xcodeproj/: project.pbxproj
ObjectivelyMVC.xcodeproj/project.xcworkspace/xcuserdata/jdolan.xcuserdatad/: UserInterfaceState.xcuserstate
ObjectivelyMVC.xcodeproj/xcshareddata/xcschemes/: ObjectivelyMVC-Constraint.xcscheme  ObjectivelyMVC-Example.xcscheme  ObjectivelyMVC-Examples.xcscheme  ObjectivelyMVC-Hello-iOS.xcscheme  ObjectivelyMVC-Hello.xcscheme  ObjectivelyMVC-Selector.xcscheme  ObjectivelyMVC-Style.xcscheme  ObjectivelyMVC-Stylesheet.xcscheme  ObjectivelyMVC-Tests.xcscheme  ObjectivelyMVC-Xcode.xcscheme  ObjectivelyMVC-xcframework.xcscheme  ObjectivelyMVC.xcscheme
ObjectivelyMVC.xcworkspace/: contents.xcworkspacedata
ObjectivelyMVC.xcworkspace/xcshareddata/: ObjectivelyMVC.xcscmblueprint  SDL_mvc.xcscmblueprint
ObjectivelyMVC.xcworkspace/xcuserdata/jdolan.xcuserdatad/: UserInterfaceState.xcuserstate
Sources/: MVCColor.h  MVCMain.c  MVCMain.h  MVCView.c  MVCViewController.h  MVC_Font.c  MVC_Font.h  MVC_Image.c  MVC_Image.h  MVC_Textfield.c  MVC_Textfield.h  MVC_View.h  MVC_ViewController.c  Makefile.am  ObjectivelyMVC.h  ObjectivelyMVC.pc  ObjectivelyMVC.pc.in  SDL_mvc.h
Sources/Objectively/: MVC.h
Sources/Objectively/MVC/: Color.c  Color.h  Font.c  Font.h  Image.c  Image.h  ImageView.c  ImageView.h  Label.c  Label.h  Main.c  Main.h  Makefile.am  Textfield.c  Textfield.h  View.c  View.h  ViewController.c  ViewController.h
Sources/ObjectivelyMVC/: Action.c  Action.h  Box.c  Box.h  Button.c  Button.h  Checkbox.c  Checkbox.h  CollectionItemView.c  CollectionItemView.h  CollectionView.c  CollectionView.h  ColorPicker.c  ColorPicker.h  ColorSelect.c  ColorSelect.h  Colors.c  Colors.h  Constraint.c  Constraint.h  Context.c  Context.h  Control.c  Control.h  DebugViewController.c  DebugViewController.h  DefaultProgram.c  DefaultProgram.h  Drawable.c  Drawable.h  Font.c  Font.h  HSVColorPicker.c  HSVColorPicker.h  HueColorPicker.c  HueColorPicker.h  Image.c  Image.h  ImageView.c  ImageView.h  (+119 more)
Sources/ObjectivelyMVC/Shaders/: Renderer.frag.hlsl  Renderer.vert.hlsl
Tests/: Makefile.am
Tests/ObjectivelyMVC/: .gitignore  Constraint.c  Makefile.am  Selector.c  Style.c  Stylesheet.c
data/fonts/: dejavu-sans-ttf
data/fonts/dejavu-sans-ttf-2.34/: langcover-sans.txt  unicover-sans.txt
scripts/: build-xcframework.sh
src/: MVC_button.c  MVC_button.h  MVC_color.c  MVC_color.h  MVC_font.c  MVC_font.h  MVC_image.c  MVC_image.h  MVC_label.c  MVC_label.h  MVC_main.c  MVC_main.h  MVC_object.c  MVC_object.h  MVC_stdinc.h  MVC_view.c  MVC_view.h  MVC_viewcontroller.c  MVC_viewcontroller.h  Makefile.am  SDL_button.c  SDL_button.h  SDL_label.c  SDL_label.h  SDL_mvc.c  SDL_mvc.h  SDL_view.c  SDL_view.h  SDL_viewcontroller.c  SDL_viewcontroller.h
(+14 files in other folders)
